Mon Nov 23 10:56:18 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * THANKS:
          Added Wolfgang Pickartz.for solving a TAO_IDL compiler
          issue.

Mon Nov 23 07:53:57 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/changelog:
        * debianbuild/control:
        * debianbuild/dsc:
        * debianbuild/rules:
          Imported last version from debian

Thu Nov 19 20:29:57 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Log_Msg_NT_Event_Log.cpp (ACE_Log_Msg_NT_Event_Log::log):
          Added checks to ensure that log() works properly if the msg_data
          size is greater than ACE_Log_Record::MAXLOGMSGLEN.  Thanks to
          Gaurav Kulshreshtha <gaurav dot kulshreshtha at onmobile dot
          com> for contributing this fix.

Fri Nov 20 08:45:52 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Log_Msg.cpp:
          Updated documentation for '%S' modifier.

Fri Nov 20 07:06:04 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Sig_Handler.cpp:
          Reverted: Sun Nov  1 16:47:29 UTC 2009  Olli Savia  <ops@iki.fi>

Thu Nov 19 14:08:29 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Sig_Handler.cpp:
          Reverted: Mon Nov  2 08:36:24 UTC 2009  Olli Savia  <ops@iki.fi>

Wed Nov 19 09:45:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-WinCE.h:
          Only define FILE_MAP_COPY when it is not defined yet

Mon Nov 16 14:40:42 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_win32_interix.GNU:
        * ace/config-win32-interix.h:
        * ace/os_include/sys/os_types.h:
          Updated Interix support.

Sun Nov 15 08:09:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/*:
          Renamed all files for x.7.4

Fri Nov 13 19:38:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Sys::Hostname shouldn't be used in a test script, use HostName on