@@ -1,3 +1,12 @@
+Tue Nov 24 09:39:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Tokenizer_T.cpp:
+          Check if buffer_ is not nil
+
+        * bin/fuzz.pl:
+          Export files shouldn't be in the ciao repository anymore, all
+          should be generated by TAO_IDL
+
 Mon Nov 23 10:56:18 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * THANKS:
